--- a/app/views/tasks/index.html.erb
+++ b/app/views/tasks/index.html.erb
@@ -1,4 +1,10 @@
 <h1>All tasks</h1>
 <% @tasks.each do |task|%>
-  <h3><%=task.name %> <%=task.completed%></h3>
+  <h3><%=task.titel %></h3>
 <%end%>
+
+<ul>
+  <% @tasks.each do |task| %>
+    <li><%= link_to task.titel, task_path(task) %></li>
+  <% end %>
+</ul>
